--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
+cython==0.28.4
 # pytorch-pretrained-bert
-git+https://github.com/epfml/sent2vec
-git+https://github.com/neuml/cord19q
-ipywidgets
+git+https://github.com/epfml/sent2vec@6b0eddec0c95e6e7f6f06582700305957311bfb9
+# git+https://github.com/neuml/cord19q
+ipywidgets==7.5.1
+nltk==3.4.5
 numpy==1.18.2
-pdfkit
-pillow
-sentence-transformers
-tensorflow-hub
+pdfkit==0.6.1
+pillow==7.1.1
+sentence-transformers==0.2.5.1
+tensorflow-hub==0.8.0
+tensorflow==2.1.0
 torch==1.4.0
-transformers
+transformers==2.3.0
