--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ git+https://github.com/epfml/sent2vec@6b0eddec0c95e6e7f6f06582700305957311bfb9
 ipywidgets==7.5.1
 nltk==3.4.5
 numpy==1.18.2
+pandas==0.24.2
 pdfkit==0.6.1
 pillow==7.1.1
 sentence-transformers==0.2.5.1
