--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-cython==0.28.4
+jupyterlab==1.0.4
+Cython==0.29.13
+numpy==1.18.2
 # pytorch-pretrained-bert
 git+https://github.com/epfml/sent2vec@6b0eddec0c95e6e7f6f06582700305957311bfb9
 # git+https://github.com/neuml/cord19q
 ipywidgets==7.5.1
 nltk==3.4.5
-numpy==1.18.2
 pandas==0.24.2
 pdfkit==0.6.1
 pillow==7.1.1
