Create initial testing setup
Creation of fixtures that try to imitate the actual data we have:
- database (cursor)
- embeddings
- multiple paths

Partly addresses [BBS-2]

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,10 @@
+[flake8]
+count = True
+max-line-length = 120
+
 [pydocstyle]
 convention = numpy
+
+[tool:pytest]
+addopts = -v
+testpaths = tests
