--- a/docker/Dockerfile-embedding_server
+++ b/docker/Dockerfile-embedding_server
@@ -4,6 +4,11 @@ LABEL maintainer="Stanislav Schmidt <stanislav.schmidt@epfl.ch>"
 LABEL version="1.0"
 LABEL description="REST API Server for Text Embeddings"
 
+# ENV HTTP_PROXY='http://bbpproxy.epfl.ch:80/'
+# ENV HTTPS_PROXY='http://bbpproxy.epfl.ch:80/'
+# ENV http_proxy='http://bbpproxy.epfl.ch:80/'
+# ENV https_proxy='http://bbpproxy.epfl.ch:80/'
+
 # Install git, gcc, and g++
 RUN apt-get update && apt-get install -y \
     git \
@@ -23,17 +28,18 @@ RUN true \
     && pip install --no-cache-dir -r /tmp/requirements.txt \
     && rm /tmp/requirements.txt
 
-# Install the app and download the NLTK data
+# Install the app 
 ADD . /src
 WORKDIR /src
-RUN true \
-    && python setup.py install \
-    && python -c "import nltk; nltk.download('punkt'); nltk.download('stopwords')"
+RUN python setup.py install
 
 # Add a user
 RUN useradd --create-home serveruser
 WORKDIR /home/serveruser
 USER serveruser
+
+# Download the NLTK libraries
+RUN python -c "import nltk; nltk.download('punkt'); nltk.download('stopwords')"
 
 # Expose a port
 EXPOSE 8080
