Try to make coverage works

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,5 +8,5 @@ convention = numpy
 [tool:pytest]
 addopts = -v
           --disable-warnings
-          --cov=src/bbsearch/
+          --cov=bbsearch
 testpaths = tests
