Restrict CoreNLP annotators in Dockerfile
This saves a lot of memory and speeds up the computation.

--- a/docker/Dockerfile-corenlp
+++ b/docker/Dockerfile-corenlp
@@ -34,5 +34,5 @@ USER corenlpuser
 # Expose a port
 EXPOSE 9000
 
-ENTRYPOINT exec java -mx4g -cp "*" edu.stanford.nlp.pipeline.StanfordCoreNLPServer -port 9000
+ENTRYPOINT exec java -mx4g -cp "*" edu.stanford.nlp.pipeline.StanfordCoreNLPServer -port 9000 -annotators "tokenize,ssplit,pos,depparse"
 
