--- a/docker/Dockerfile-grobid_quantities
+++ b/docker/Dockerfile-grobid_quantities
@@ -24,14 +24,14 @@ USER grobiduser
 
 # Download and install GROBID
 RUN true \
-	&& git clone https://github.com/kermitt2/grobid.git grobid \
+	&& git clone --depth=1 https://github.com/kermitt2/grobid.git grobid \
 	&& cd grobid \
 #	&& echo "systemProp.https.proxyHost=bbpproxy.epfl.ch" >> gradle.properties \
 	&& ./gradlew clean install
 
 # Download and install GROBID Quantities
 RUN true \
-	&& git clone https://github.com/kermitt2/grobid-quantities.git grobid/grobid-quantities \
+	&& git clone --depth=1 https://github.com/kermitt2/grobid-quantities.git grobid/grobid-quantities \
 	&& cd grobid/grobid-quantities/ \
 #	&& echo "\nsystemProp.https.proxyHost=bbpproxy.epfl.ch" >> gradle.properties \
 	&& ./gradlew copyModels \
