[BBS-60] Attribute Extraction (#41)
Main contributions:
* Added new module `bbsearch.mining.attributes` (all classes are accessible from `bbsearch.mining`)
* Main attribute extraction class is `AttributeExtractor`
* Two helper widget classes `AttributeAnnotationTab` and `TextCollectionWidget`
* Added notebook with usage example
* Added tests for the new module
* Added Dockerfiles for CoreNLP and GROBID Quantities
* Improved BBS main Dockerfile

To do (see BBS-78):
* Integrate into main pipeline
* Move widgets to a different module

Some commits from the embedding REST API have slipped in introducing the following:
* Change REST API method from GET to POST
* Fix NLTK download in embedding Dockerfile
* Introduce request checks in embedding REST API

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,30 +5,27 @@ FROM continuumio/miniconda3
 # ENV http_proxy='http://bbpproxy.epfl.ch:80/'
 # ENV https_proxy='http://bbpproxy.epfl.ch:80/'
 
-RUN \
-conda update conda && \
-apt-get update && \
-apt-get install -y gcc g++ wkhtmltopdf
-
-# Install sent2vec
-RUN pip install Cython numpy
-RUN pip install git+https://github.com/epfml/sent2vec
+# Update conda, install additional system packages
+RUN true \
+	&& conda update conda \
+	&& apt-get update \
+	&& apt-get install -y gcc g++ build-essential vim wkhtmltopdf
 
 # Install requirements.txt
 RUN mkdir -p /bbs/tmp
 COPY /requirements.txt /bbs/tmp
-WORKDIR /bbs/tmp
-RUN pip install -r requirements.txt
+RUN pip install Cython numpy
+RUN pip install -r /bbs/tmp/requirements.txt
 
-# Install PyTorch
-# RUN conda install pytorch torchvision -c pytorch
-
-# jupyterlab-manager
-# RUN conda remove wrapt
+# Jupyter
 RUN conda install -c conda-forge nodejs
 RUN jupyter labextension install @jupyter-widgets/jupyterlab-manager
+RUN jupyter labextension install @jupyterlab/toc
+EXPOSE 8888
+
+RUN groupadd -g 999 docker
+RUN useradd --create-home --uid 1000 --gid docker bbsuser
 
 WORKDIR /bbs
 RUN rm -rf /bbs/tmp
-CMD /bin/bash
-
+ENTRYPOINT exec /bin/bash
