--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ jupyterlab==1.0.4
 Cython==0.29.13
 numpy==1.18.2
 # pytorch-pretrained-bert
-git+https://github.com/epfml/sent2vec@6b0eddec0c95e6e7f6f06582700305957311bfb9
+sent2vec-prebuilt
 Flask==1.1.2
 requests==2.23.0
 ipywidgets==7.5.1
