--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ install:
   - pip install --upgrade pip
   - pip install wheel
   - pip install --upgrade .[dev]
+  - python -c "import nltk; nltk.download('stopwords'); nltk.download('punkt')"
+before_script:
+  - pip freeze
 # command to run tests
-script: pytest
+script: pytest --color=yes
