--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
   - "3.8"
 
 before_install:
-  - pip install flake8; flake8 src/
+  - pip install flake8; flake8 --exit-zero src/
 # command to install dependencies
 install:
   - pip install --upgrade pip
