added pydocstyle that forwards stderr to stdout

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ python:
   - "3.8"
 
 before_install:
-  - pip install flake8; flake8 --exit-zero src/
+  - pip install flake8; flake8 src/ 2>&1
+  - pip install pydocstyle; pydocstyle src/ 2>&1
 # command to install dependencies
 install:
   - pip install --upgrade pip
