--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ before_script:
   - pip freeze
 # command to run tests
 script:
-  - pytest --color=yes
+  - pytest --color=yes --cov-report term-missing
