--- a/docker/Dockerfile-search_server
+++ b/docker/Dockerfile-search_server
@@ -41,11 +41,11 @@ RUN python -c "import nltk; nltk.download('punkt'); nltk.download('stopwords')"
 EXPOSE 8080
 ENV MODELS_PATH="/raid/bbs_data/trained_models"
 ENV EMBEDDINGS_PATH="/raid/bbs_data/cord19_v7/embeddings"
-ENV DATABASES_PATH="/raid/bbs_data/cord19_v7/databases"
+ENV DATABASE_PATH="/raid/bbs_data/cord19_v7/databases/cord19.db"
 
 ENTRYPOINT exec search_server \
     --host=0.0.0.0 \
     --port=8080 \
     --models_path $MODELS_PATH \
     --embeddings_path $EMBEDDINGS_PATH \
-    --databases_path $DATABASES_PATH
+    --database_path $DATABASE_PATH
