Add durations argument to pytest in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,8 @@ max-line-length = 120
 convention = numpy
 
 [tool:pytest]
-addopts = -v
+addopts = --cov=bbsearch
           --disable-warnings
-          --cov=bbsearch
+          --durations=20
+          -v
 testpaths = tests
