--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,14 @@ sent2vec-prebuilt
 Flask==1.1.2
 requests==2.23.0
 ipywidgets==7.5.1
+matplotlib==3.2.1
 nltk==3.4.5
 pandas==1.0.3
 pdfkit==0.6.1
 pillow==7.1.1
 sentence-transformers==0.2.5.1
 git+https://github.com/allenai/scibert
+scikit-learn==0.23.1
 scispacy==0.2.4
 spacy==2.2.1
 tensorflow-hub==0.8.0
