--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ sentence-transformers==0.2.5.1
 git+https://github.com/allenai/scibert
 scispacy==0.2.4
 spacy==2.2.1
+SQLAlchemy==1.3.18
 tensorflow-hub==0.8.0
 tensorflow==2.2.0
 torch==1.4.0
