--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ git+https://github.com/allenai/scibert
 scikit-learn==0.23.1
 scispacy==0.2.4
 spacy==2.2.1
+SQLAlchemy==1.3.18
 tensorflow-hub==0.8.0
 tensorflow==2.2.0
 torch==1.4.0
