--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,5 @@ before_script:
   - pip freeze
 # command to run tests
 script:
-  - make -C docs docstest
+  - make -C docs doctest
   - pytest --color=yes --cov-report term-missing
