--- a/docker/Dockerfile-mining_server
+++ b/docker/Dockerfile-mining_server
@@ -41,6 +41,8 @@ RUN python -c "import nltk; nltk.download('punkt'); nltk.download('stopwords')"
 # Expose a port
 EXPOSE 8080
 ENV MODELS_PATH="/raid/bbs_data/trained_models"
+ENV LOG_DIR="/raid/projects/bbs/logs"
+ENV LOG_NAME="bbs_mining.log"
 
 ENTRYPOINT exec mining_server \
     --host=0.0.0.0 \
