--- a/docker/Dockerfile-embedding_server
+++ b/docker/Dockerfile-embedding_server
@@ -13,7 +13,9 @@ LABEL description="REST API Server for Text Embeddings"
 RUN apt-get update && apt-get install -y \
     git \
     gcc \
-    g++
+    g++ \
+    build-essential \
+    vim
 
 # Install sent2vec
 RUN true \
@@ -31,7 +33,7 @@ RUN true \
 # Install the app 
 ADD . /src
 WORKDIR /src
-RUN python setup.py install
+RUN pip install .
 
 # Add a user
 RUN useradd --create-home serveruser
@@ -43,5 +45,7 @@ RUN python -c "import nltk; nltk.download('punkt'); nltk.download('stopwords')"
 
 # Expose a port
 EXPOSE 8080
+ENV LOG_DIR="/raid/projects/bbs/logs"
+ENV LOG_NAME="bbs_embedding.log"
 
 ENTRYPOINT ["embedding_server", "--host=0.0.0.0", "--port=8080"]
