--- a/docker/Dockerfile-mining_server
+++ b/docker/Dockerfile-mining_server
@@ -40,11 +40,11 @@ RUN python -c "import nltk; nltk.download('punkt'); nltk.download('stopwords')"
 
 # Expose a port
 EXPOSE 8080
-ENV MODELS_PATH="/raid/bbs_data/trained_models"
+ENV EE_MODELS_LIBRARY="/raid/bbs_data/models_libraries/ee_models_library.csv"
 ENV LOG_DIR="/raid/projects/bbs/logs"
 ENV LOG_NAME="bbs_mining.log"
 
 ENTRYPOINT exec mining_server \
     --host=0.0.0.0 \
     --port=8080 \
-    --models_path $MODELS_PATH
+    --ee_models_lib $EE_MODELS_LIBRARY
