--- a/docker/Dockerfile-mining_server
+++ b/docker/Dockerfile-mining_server
@@ -38,6 +38,13 @@ USER serveruser
 # Download the NLTK libraries
 RUN python -c "import nltk; nltk.download('punkt'); nltk.download('stopwords')"
 
+# Download the scispaCy models
+RUN pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_ner_craft_md-0.2.5.tar.gz
+RUN pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_ner_jnlpba_md-0.2.5.tar.gz
+RUN pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_ner_bc5cdr_md-0.2.5.tar.gz
+RUN pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_ner_bionlp13cg_md-0.2.5.tar.gz
+RUN pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_core_sci_lg-0.2.5.tar.gz
+
 # Expose a port
 EXPOSE 8080
 ENV EE_MODELS_LIBRARY="/raid/bbs_data/models_libraries/ee_models_library.csv"
