--- a/docker/Dockerfile-mining_server
+++ b/docker/Dockerfile-mining_server
@@ -1,7 +1,6 @@
 FROM python:3.6-slim
 
-LABEL maintainer="Stanislav Schmidt <stanislav.schmidt@epfl.ch>"
-LABEL version="1.0"
+LABEL maintainer="BBP-EPFL Machine Learning team <bbp-ou-machinelearning@groupes.epfl.ch"
 LABEL description="REST API Server for BBSearch Mining"
 
 # ENV HTTP_PROXY='http://bbpproxy.epfl.ch:80/'
@@ -16,6 +15,12 @@ RUN apt-get update && apt-get install -y \
     g++ \
     build-essential \
     vim
+
+# Get sha of last git commit, to be used for versioning
+ENV GIT_COMMIT="$(git log -1 --format=%H)"
+
+# Set image version
+LABEL version=$GIT_COMMIT
 
 # Install requirements manualy, this layer will be cached by docker
 COPY requirements.txt /tmp
@@ -54,4 +59,5 @@ ENV LOG_NAME="bbs_mining.log"
 ENTRYPOINT exec mining_server \
     --host=0.0.0.0 \
     --port=8080 \
-    --ee_models_lib $EE_MODELS_LIBRARY
+    --ee_models_lib $EE_MODELS_LIBRARY \
+    --version=$GIT_COMMIT
