--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 .DS_Store
 
 # Version file
-/src/_bbsearch_version.py
+/src/bbsearch/_version.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
