--- a/docker/Dockerfile-search_server
+++ b/docker/Dockerfile-search_server
@@ -40,7 +40,7 @@ RUN python -c "import nltk; nltk.download('punkt'); nltk.download('stopwords')"
 # Expose a port
 EXPOSE 8080
 ENV MODELS_PATH="/raid/bbs_data/trained_models"
-ENV EMBEDDINGS_PATH="/raid/bbs_data/cord19_v35/embeddings"
+ENV EMBEDDINGS_PATH="/raid/bbs_data/cord19_v35/embeddings/embeddings.h5"
 ENV DATABASE_URI="dgx1.bbp.epfl.ch:8853/cord19_v35"
 ENV LOG_DIR="/raid/projects/bbs/logs"
 ENV LOG_NAME="bbs_search.log"
