--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ nltk==3.4.5
 pandas==1.0.3
 pdfkit==0.6.1
 pillow==7.1.1
+pymysql==0.10.0
 sentence-transformers==0.2.5.1
 git+https://github.com/allenai/scibert
 scikit-learn==0.23.1
