--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ cache:
   pip: true
 
 before_install:
+  - apt-get install -y wkhtmltopdf
   - pip install flake8 pydocstyle
   - flake8 src/
   - pydocstyle src/
