--- a/docker/Dockerfile-search_server
+++ b/docker/Dockerfile-search_server
@@ -48,6 +48,7 @@ ENV LOG_NAME="bbs_search.log"
 ENTRYPOINT exec search_server \
     --host=0.0.0.0 \
     --port=8080 \
+#    --debug \
     --models_path $MODELS_PATH \
     --embeddings_path $EMBEDDINGS_PATH \
     --database_uri $DATABASE_URI
