--- a/docker/Dockerfile-search_server
+++ b/docker/Dockerfile-search_server
@@ -1,8 +1,5 @@
 FROM python:3.6-slim
 
-LABEL maintainer="BBP-EPFL Machine Learning team <bbp-ou-machinelearning@groupes.epfl.ch"
-LABEL description="REST API Server for BBSearch"
-
 # ENV HTTP_PROXY='http://bbpproxy.epfl.ch:80/'
 # ENV HTTPS_PROXY='http://bbpproxy.epfl.ch:80/'
 # ENV http_proxy='http://bbpproxy.epfl.ch:80/'
@@ -29,6 +26,8 @@ WORKDIR /src
 RUN pip install .
 
 # Set image version
+LABEL maintainer="BBP-EPFL Machine Learning team <bbp-ou-machinelearning@groupes.epfl.ch>"
+LABEL description="REST API Server for BBSearch"
 LABEL version="$(python -c 'import bbsearch; print(bbsearch.__version__)')"
 
 # Add a user
