Add posargs to pytest in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ envlist =
 [testenv]
 ;basepython=python3.6
 deps = {[base]testdeps}
-commands = pytest tests
+commands = pytest {posargs:tests}
 
 ;[testenv:check-version]
 ;skip_install = true
@@ -65,7 +65,7 @@ commands =
     black setup.py
 
 [testenv:coverage]
-usedevelop=True
+usedevelop = True
 deps =
     {[base]testdeps}
     pytest-cov
