--- a/docker/Dockerfile-mining_server
+++ b/docker/Dockerfile-mining_server
@@ -16,7 +16,7 @@ RUN apt-get update && apt-get install -y \
 # Install requirements manualy, this layer will be cached by docker
 COPY requirements.txt /tmp
 RUN true \
-    && pip install -U pip \
+    && pip install --upgrade pip \
     && pip install Cython numpy \
     && pip install --no-cache-dir -r /tmp/requirements.txt \
     && rm /tmp/requirements.txt
