--- a/docker/Dockerfile-search_server
+++ b/docker/Dockerfile-search_server
@@ -16,6 +16,7 @@ RUN apt-get update && apt-get install -y \
 # Install requirements manualy, this layer will be cached by docker
 COPY requirements.txt /tmp
 RUN true \
+    && pip install --upgrade pip \
     && pip install Cython numpy \
     && pip install --no-cache-dir -r /tmp/requirements.txt \
     && rm /tmp/requirements.txt
