Fix typos, add npm

--- a/docker/Dockerfile-base
+++ b/docker/Dockerfile-base
@@ -8,13 +8,11 @@ FROM python:3.6-slim
 # Install system packages
 RUN apt-get update && apt-get install -y \
     git \
-    gcc \
-    g++ \
+    gcc g++ \
     build-essential \
     vim \
-    nodejs \
-    libfontconfig1 \
-    wkhtmltopdf
+    nodejs npm \
+    libfontconfig1 wkhtmltopdf
 
 # Upgrade pip
 RUN pip install --upgrade pip
@@ -22,8 +20,8 @@ RUN pip install --upgrade pip
 # Install Jupyter & IPython
 RUN true \
     && pip install ipython jupyter jupyterlab ipywidgets \
-    && jupyter nbextension enable --py widgetsnbextension
-    && jupyter labextension install @jupyter-widgets/jupyterlab-manager
+    && jupyter nbextension enable --py widgetsnbextension \
+    && jupyter labextension install @jupyter-widgets/jupyterlab-manager \
     && jupyter labextension install @jupyterlab/toc
 EXPOSE 8888
 
