--- a/docker/Dockerfile-search_server
+++ b/docker/Dockerfile-search_server
@@ -11,6 +11,7 @@ RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
     build-essential \
+    default-libmysqlclient-dev \
     vim
 
 # Install requirements manualy, this layer will be cached by docker
@@ -18,7 +19,8 @@ COPY requirements.txt /tmp
 RUN true \
     && pip install Cython numpy \
     && pip install --no-cache-dir -r /tmp/requirements.txt \
-    && rm /tmp/requirements.txt
+    && rm /tmp/requirements.txt \
+    && pip install mysqlclient
 
 # Install the app
 ADD . /src
