Remove libssl-dev from docker file

--- a/docker/Dockerfile-search_server
+++ b/docker/Dockerfile-search_server
@@ -10,7 +10,7 @@ RUN apt-get update && apt-get install -y \
     git \
     gcc g++ \
     build-essential \
-    libmysqlclient-dev libssl-dev \
+    libmysqlclient-dev \
     vim
 
 # Install requirements manualy, this layer will be cached by docker
