Improve tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,16 @@
-[base]
+[tox]
 source = src/bbsearch
 testdeps =
     mock
     pytest
-
-[tox]
 envlist =
 ;    check-version
 ;    check-packaging
     lint
+    docs
     py36
-    py37
-    py38
+;    py37
+;    py38
 
 ;minversion = 3.1.0
 ;
@@ -22,7 +21,7 @@ envlist =
 
 [testenv]
 ;basepython=python3.6
-deps = {[base]testdeps}
+deps = {[tox]testdeps}
 commands = pytest {posargs:tests}
 
 ;[testenv:check-version]
@@ -48,9 +47,9 @@ deps =
     isort
     pydocstyle
 commands =
-    flake8 {[base]source}
+    flake8 {[tox]source}
 ;    isort --profile black --check {[base]source}
-    pydocstyle {[base]source}
+    pydocstyle {[tox]source}
 ;    bandit -q -r {[base]source}
 ;    black -q --check {[base]source}
 ;    black -q --check tests
@@ -59,22 +58,24 @@ commands =
 [testenv:format]
 deps = black isort
 commands =
-    isort --profile black {[base]source}
-    black {[base]source}
+    isort --profile black {[tox]source}
+    black {[tox]source}
     black tests
     black setup.py
 
 [testenv:coverage]
 usedevelop = True
 deps =
-    {[base]testdeps}
+    {[tox]testdeps}
     pytest-cov
 commands =
-    pytest --cov-branch --cov-report term-missing --cov-report xml --cov={[base]source} tests/
+    pytest --cov-branch --cov-report term-missing --cov-report xml --cov={[tox]source} tests/
 
 [testenv:docs]
-changedir = doc
-extras = docs
+changedir = docs
+extras = dev
 # set warnings as errors using the -W sphinx option
-commands = make html SPHINXOPTS=-W
+commands =
+    make doctest
+    make html SPHINXOPTS=-W
 whitelist_externals = make
