--- a/docker/Dockerfile-search_server
+++ b/docker/Dockerfile-search_server
@@ -47,6 +47,7 @@ ENV EMBEDDINGS_PATH="/raid/sync/proj115/bbs_data/cord19_v35/embeddings/embedding
 ENV DATABASE_URI="dgx1.bbp.epfl.ch:8853/cord19_v35"
 ENV LOG_DIR="/raid/projects/bbs/logs"
 ENV LOG_NAME="bbs_search.log"
+ENV MODELS="BSV,SBioBERT"
 
 ENTRYPOINT exec search_server \
     --host=0.0.0.0 \
@@ -54,4 +55,5 @@ ENTRYPOINT exec search_server \
 #    --debug \
     --models_path $MODELS_PATH \
     --embeddings_path $EMBEDDINGS_PATH \
-    --database_uri $DATABASE_URI
+    --database_uri $DATABASE_URI \
+    --models $MODELS
