Improve tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,44 +1,22 @@
 [tox]
+minversion = 3.1.0
 source = src/bbsearch
-testdeps =
-    mock
-    pytest
 envlist =
-;    check-version
-;    check-packaging
     lint
     docs
     py36
-;    py37
-;    py38
-
-;minversion = 3.1.0
-;
-;# ignore basepython for envs that already specify a version
-;ignore_basepython_conflict = true
-;indexserver =
-;    default = https://bbpteam.epfl.ch/repository/devpi/simple
+    py37
+    py38
+    check-packaging
 
 [testenv]
-;basepython=python3.6
-deps = {[tox]testdeps}
+deps =
+    pytest
+    pytest-cov
+extras = dev
 commands = pytest {posargs:tests}
 
-;[testenv:check-version]
-;skip_install = true
-;deps = bbp-nse-ci
-;commands = do_release.py -p . check-version
-
-;[testenv:check-packaging]
-;deps =
-;    wheel
-;    twine
-;commands =
-;    python setup.py sdist bdist_wheel -d {envtmpdir}/dist
-;    twine check {envtmpdir}/dist/*
-
 [testenv:lint]
-skipsdist = true
 skip_install = true
 deps =
     bandit
@@ -50,10 +28,10 @@ commands =
     flake8 {[tox]source}
 ;    isort --profile black --check {[base]source}
     pydocstyle {[tox]source}
-;    bandit -q -r {[base]source}
+    black -q --check setup.py
 ;    black -q --check {[base]source}
 ;    black -q --check tests
-    black -q --check setup.py
+;    bandit -q -r {[base]source}
 
 [testenv:format]
 deps = black isort
@@ -63,14 +41,6 @@ commands =
     black tests
     black setup.py
 
-[testenv:coverage]
-usedevelop = True
-deps =
-    {[tox]testdeps}
-    pytest-cov
-commands =
-    pytest --cov-branch --cov-report term-missing --cov-report xml --cov={[tox]source} tests/
-
 [testenv:docs]
 changedir = docs
 extras = dev
@@ -79,3 +49,11 @@ commands =
     make doctest
     make html SPHINXOPTS=-W
 whitelist_externals = make
+
+[testenv:check-packaging]
+deps =
+    wheel
+    twine
+commands =
+    python setup.py sdist bdist_wheel -d {envtmpdir}/dist
+    twine check {envtmpdir}/dist/*
