--- a/tox.ini
+++ b/tox.ini
@@ -57,3 +57,31 @@ deps =
 commands =
     python setup.py sdist bdist_wheel -d {envtmpdir}/dist
     twine check {envtmpdir}/dist/*
+
+[pytest]
+testpaths = tests
+filterwarnings =
+    ignore:Passing unrecoginized arguments to super:DeprecationWarning
+addopts =
+    --cov
+    --cov-config=tox.ini
+    --no-cov-on-fail
+    --durations=20
+    --verbosity=1
+    --last-failed-no-failures=all
+
+[coverage:run]
+source = bbsearch
+branch = True
+
+[coverage:report]
+fail_under = 80
+skip_covered = False
+show_missing = False
+
+[flake8]
+count = False
+max-line-length = 120
+
+[pydocstyle]
+convention = numpy
