Fix deps for testenv:format

--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,9 @@ commands =
 ;    bandit -q -r {[base]source}
 
 [testenv:format]
-deps = black isort
+deps =
+    black
+    isort
 commands =
     isort --profile black {[tox]source}
     black {[tox]source}
