Clean up tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -23,11 +23,11 @@ deps =
     pydocstyle
 commands =
     flake8 {[tox]source}
-;    isort --profile black --check {[base]source}
+    isort --profile black --check setup.py
+;    isort --profile black --check {[base]source} tests
     pydocstyle {[tox]source}
     black -q --check setup.py
-;    black -q --check {[base]source}
-;    black -q --check tests
+;    black -q --check {[base]source} tests
 ;    bandit -q -r {[base]source}
 
 [testenv:format]
@@ -35,10 +35,8 @@ deps =
     black
     isort
 commands =
-    isort --profile black {[tox]source}
-    black {[tox]source}
-    black tests
-    black setup.py
+    isort --profile=black setup.py {[tox]source} tests
+    black setup.py {[tox]source} tests
 
 [testenv:docs]
 changedir = docs
