--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,57 @@
 branches:
   only:
     - "master"
-language: python
-python:
-  - "3.6"
-  - "3.7"
-  - "3.8"
-cache:
-  pip: true
 
 services:
   - docker
-before_install:
-  - pip install flake8 pydocstyle
-  - flake8 src/
-  - pydocstyle src/
+
+language: python
+#python:
+#  - "3.6"
+#  - "3.7"
+#  - "3.8"
+#cache:
+#  pip: true
+
+matrix:
+  include:
+    - stage: Lint and Code Style
+      python: 3.8
+      env: TOXENV=lint
+
+    - stage: Docs
+      python: 3.8
+      env: TOXENV=docs
+
+    - stage: Packaging
+      python: 3.8
+      env: TOXENV=check-packaging
+
+    - stage: Tests and Coverage
+      python: 3.6
+      env: TOXENV=py36
+    - python: 3.7
+      env: TOXENV=py37
+    - python: 3.8
+      env: TOXENV=py38
+
+#before_install:
+#  - pip install flake8 pydocstyle
+#  - flake8 src/
+#  - pydocstyle src/
+
 # command to install dependencies
 install:
-  - pip install --upgrade pip wheel pytest setuptools setuptools-scm
-  - pip install --upgrade .[dev]
-  - python -c "import nltk; nltk.download('stopwords'); nltk.download('punkt')"
-before_script:
-  - pip freeze
+  - pip install tox
+#  - pip install --upgrade pip wheel pytest setuptools setuptools-scm
+#  - pip install --upgrade .[dev]
+#  - python -c "import nltk; nltk.download('stopwords'); nltk.download('punkt')"
+
+#before_script:
+#  - pip freeze
 # command to run tests
+
 script:
-  - make -C docs doctest
-  - pytest --color=yes --cov-report term-missing
+  - tox
+#  - make -C docs doctest
+#  - pytest --color=yes --cov-report term-missing
