--- a/.travis.yml
+++ b/.travis.yml
@@ -47,11 +47,9 @@ install:
 #  - pip install --upgrade .[dev]
 #  - python -c "import nltk; nltk.download('stopwords'); nltk.download('punkt')"
 
-#before_script:
-#  - pip freeze
-# command to run tests
+before_script:
+  - pip install --upgrade pip setuptools
+  - pip freeze
 
 script:
   - tox
-#  - make -C docs doctest
-#  - pytest --color=yes --cov-report term-missing
