Create initial setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,8 @@ max-line-length = 120
 convention = numpy
 
 [tool:pytest]
-addopts = --cov=bbsearch
+addopts = --benchmark-skip
+          --cov=bbsearch
           --disable-warnings
           --durations=20
           -v
