Download NLTK data in [testenv]

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,6 @@
 [build-system]
 requires = [
-    "pip>=18.1",
     "setuptools>=42",
+    "setuptools_scm[toml]>=3.4",
     "wheel",
-    "setuptools_scm[toml]>=3.4"
 ]
