--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,9 @@ envlist =
 [testenv]
 download = true
 extras = dev
-commands = pytest {posargs:tests}
+commands =
+    python -m nltk.downloader stopwords punkt
+    pytest {posargs:tests}
 
 [testenv:lint]
 skip_install = true
