--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,10 @@ services:
   - docker
 
 language: python
-#python:
-#  - "3.6"
-#  - "3.7"
-#  - "3.8"
-#cache:
-#  pip: true
+
+cache:
+    directories:
+        - $HOME/.cache/pip
 
 matrix:
   include:
@@ -35,17 +33,8 @@ matrix:
     - python: 3.8
       env: TOXENV=py38
 
-#before_install:
-#  - pip install flake8 pydocstyle
-#  - flake8 src/
-#  - pydocstyle src/
-
-# command to install dependencies
 install:
   - pip install tox
-#  - pip install --upgrade pip wheel pytest setuptools setuptools-scm
-#  - pip install --upgrade .[dev]
-#  - python -c "import nltk; nltk.download('stopwords'); nltk.download('punkt')"
 
 script:
   - tox
