Add a tox environment for benchmarks

--- a/tox.ini
+++ b/tox.ini
@@ -58,6 +58,35 @@ commands =
     python setup.py sdist bdist_wheel -d {envtmpdir}/dist
     twine check {envtmpdir}/dist/*
 
+[testenv:benchmarks]
+download = true
+extras = dev
+deps =
+    pygal
+passenv =
+    EMBEDDING_SERVER
+    MINING_SERVER
+    MYSQL_SERVER
+    SEARCH_SERVER
+whitelist_externals =
+    echo
+commands =
+    echo EMBEDDING_SERVER={env:EMBEDDING_SERVER:}
+    echo MINING_SERVER={env:MINING_SERVER:}
+    echo MYSQL_SERVER={env:MYSQL_SERVER:}
+    echo SEARCH_SERVER={env:SEARCH_SERVER:}
+    pytest \
+        --benchmark-only \
+        --benchmark-group-by=func \
+        --no-cov \
+        --benchmark-min-rounds=1 \
+        --embedding_server={env:EMBEDDING_SERVER:} \
+        --mining_server={env:MINING_SERVER:} \
+        --mysql_server={env:MYSQL_SERVER:} \
+        --search_server={env:SEARCH_SERVER:} \
+        {posargs} \
+        tests/benchmarks
+
 [pytest]
 testpaths = tests
 filterwarnings =
