Run isort on src/bbsearch and tests

--- a/tox.ini
+++ b/tox.ini
@@ -26,12 +26,11 @@ deps =
     pydocstyle
 commands =
     flake8 {[tox]source}
-    isort --profile black --check setup.py
-;    isort --profile black --check {[base]source} tests
+    isort --profile black --check setup.py {[tox]source} tests
     pydocstyle {[tox]source}
     black -q --check setup.py
-;    black -q --check {[base]source} tests
-;    bandit -q -r {[base]source}
+;    black -q --check {[tox]source} tests
+;    bandit -q -r {[tox]source}
 
 [testenv:format]
 deps =
