--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ deps =
     isort
     pydocstyle
 commands =
-    flake8 {[tox]source}
+    flake8 {[tox]source} tests
     isort --profile black --check setup.py {[tox]source} tests
     pydocstyle {[tox]source}
     black -q --check setup.py
