--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ envlist =
 [testenv]
 download = true
 extras = dev
+whitelist_externals = docker
 commands =
     python -m nltk.downloader stopwords punkt
     pytest {posargs:tests}
@@ -60,15 +61,13 @@ commands =
 [testenv:benchmarks]
 download = true
 extras = dev
-deps =
-    pygal
+deps = pygal
+whitelist_externals = echo
 passenv =
     EMBEDDING_SERVER
     MINING_SERVER
     MYSQL_SERVER
     SEARCH_SERVER
-whitelist_externals =
-    echo
 commands =
     echo EMBEDDING_SERVER={env:EMBEDDING_SERVER:}
     echo MINING_SERVER={env:MINING_SERVER:}
