Run isort everywhere (#108)

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ envlist =
 [testenv]
 download = true
 extras = dev
+whitelist_externals = docker
 commands =
     python -m nltk.downloader stopwords punkt
     pytest {posargs:tests}
@@ -25,13 +26,12 @@ deps =
     isort
     pydocstyle
 commands =
-    flake8 {[tox]source}
-    isort --profile black --check setup.py
-;    isort --profile black --check {[base]source} tests
+    flake8 {[tox]source} tests
+    isort --profile black --check setup.py {[tox]source} tests
     pydocstyle {[tox]source}
     black -q --check setup.py
-;    black -q --check {[base]source} tests
-;    bandit -q -r {[base]source}
+;    black -q --check {[tox]source} tests
+;    bandit -q -r {[tox]source}
 
 [testenv:format]
 deps =
@@ -61,15 +61,13 @@ commands =
 [testenv:benchmarks]
 download = true
 extras = dev
-deps =
-    pygal
+deps = pygal
+whitelist_externals = echo
 passenv =
     EMBEDDING_SERVER
     MINING_SERVER
     MYSQL_SERVER
     SEARCH_SERVER
-whitelist_externals =
-    echo
 commands =
     echo EMBEDDING_SERVER={env:EMBEDDING_SERVER:}
     echo MINING_SERVER={env:MINING_SERVER:}
