--- a/tox.ini
+++ b/tox.ini
@@ -3,11 +3,11 @@ minversion = 3.1.0
 source = src/bbsearch
 envlist =
     lint
-    docs
-    check-packaging
     py36
     py37
     py38
+    docs
+    check-packaging
 
 [testenv]
 download = true
@@ -34,12 +34,14 @@ commands =
 ;    bandit -q -r {[tox]source}
 
 [testenv:format]
+skip_install = true
 deps =
     black
     isort
 commands =
     isort --profile=black setup.py {[tox]source} tests
-    black setup.py {[tox]source} tests
+    black setup.py
+;    black {[tox]source} tests
 
 [testenv:docs]
 changedir = docs
