--- a/docker/Dockerfile-mining_server
+++ b/docker/Dockerfile-mining_server
@@ -11,6 +11,7 @@ RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
     build-essential \
+    default-libmysqlclient-dev \
     vim
 
 # Install requirements manualy, this layer will be cached by docker
