Copy paster official recipe

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,13 @@ matrix:
     - python: 3.8
       env: TOXENV=py38
 
+before_install:
+  # make sure latest docker installed
+  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+  - sudo apt-get update
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+
 install:
   - pip install tox
 
