[BBS 129] Mining server - use cached results (#111)
Co-authored-by: Stanislav Schmidt <stanislav.schmidt@epfl.ch>
Co-authored-by: Stanislav Schmidt <Stannislav@users.noreply.github.com>
Co-authored-by: Francesco Casalegno <francesco.casalegno@gmail.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,6 +11,8 @@ RUN true \
 	&& apt-get update \
 	&& apt-get install -y gcc g++ build-essential vim libfontconfig1 wkhtmltopdf
 
+RUN conda install -c carta mysqlclient
+
 # Install requirements.txt
 RUN mkdir -p /bbs/tmp
 COPY /requirements.txt /bbs/tmp
