--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ services:
 
 language: python
 
+cache:
+    directories:
+        - $HOME/.cache/pip
+
 matrix:
   include:
     - stage: Lint and Code Style
