--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Cython==0.29.13
+Cython==0.29.21
 Flask==1.1.2
-SQLAlchemy==1.3.18
-Sphinx==3.2.0
+SQLAlchemy==1.3.19
+Sphinx==3.2.1
 cryptography==3.0
 dash-cytoscape==0.0.5
 dash-table==4.6.2
-docker==4.2.2
+docker==4.3.1
 flake8==3.8.3
 git+https://github.com/allenai/scibert
 h5py==2.10.0
@@ -16,28 +16,28 @@ ipython==7.16.1
 ipywidgets==7.5.1
 jupyter-dash==0.2.1.post1
 jupyter-server-proxy==1.5.0
-jupyterlab==1.0.4
-matplotlib==3.2.1
+jupyterlab==2.2.5
+matplotlib==3.3.1
 networkx==2.4
-nltk==3.4.5
-numpy==1.18.2
-pandas==1.0.3
+nltk==3.5
+numpy==1.18.5
+pandas==1.1.1
 pdfkit==0.6.1
-pillow==7.1.1
+pillow==7.2.0
 pycodestyle==2.6.0
 pymysql==0.10.0
-pytest-cov==2.10.0
+pytest-cov==2.10.1
 pytest==6.0.1
-requests==2.23.0
-responses==0.10.15
-scikit-learn==0.23.1
-scispacy==0.2.4
-sent2vec-prebuilt
-sentence-transformers==0.2.5.1
-spacy==2.3.1
-sphinx-bluebrain-theme==0.2.2
-tensorflow-hub==0.8.0
-tensorflow==2.2.0
-torch==1.5.0
-tox==3.18.1
-transformers==2.3.0
+requests==2.24.0
+responses==0.10.16
+scikit-learn==0.23.2
+scispacy==0.2.5
+sent2vec-prebuilt==0.0.2
+sentence-transformers==0.3.3
+spacy==2.3.2
+sphinx-bluebrain-theme==0.2.3
+tensorflow-hub==0.9.0
+tensorflow==2.3.0
+torch==1.6.0
+tox==3.19.0
+transformers==3.0.2
