--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,85 @@
-version: "3"
+version: "3.8"
 services:
+  base:
+    build:
+      context: .
+      dockerfile: docker/base.Dockerfile
+    image: bbs_base
+    container_name: $CONTAINER_NAME_BASE
+    environment:
+      - HTTP_PROXY
+      - HTTPS_PROXY
+      - http_proxy
+      - https_proxy
+    networks:
+      - bbs_network
+
   search:
     build:
       context: .
-      dockerfile: docker/Dockerfile-search_server
+      dockerfile: docker/search.Dockerfile
     image: bbs_search
+    container_name: $CONTAINER_NAME_SEARCH
     ports:
-      - "8850:8080"
+      - $PORT_SEARCH:8080
     volumes:
       - /raid:/raid
+    networks:
+      - bbs_network
+
+  embedding:
+    build:
+      context: .
+      dockerfile: docker/embedding.Dockerfile
+    image: bbs_embedding
+    container_name: $CONTAINER_NAME_EMBEDDING
+    environment:
+      - HTTP_PROXY
+      - HTTPS_PROXY
+      - http_proxy
+      - https_proxy
+    ports:
+      - $PORT_EMBEDDING:8080
+    networks:
+      - bbs_network
+
   mining:
     build:
       context: .
-      dockerfile: docker/Dockerfile-mining_server
+      dockerfile: docker/mining.Dockerfile
     image: bbs_mining
+    container_name: $CONTAINER_NAME_MINING
+    environment:
+      - HTTP_PROXY
+      - HTTPS_PROXY
+      - http_proxy
+      - https_proxy
     ports:
-      - "8852:8080"
+      - $PORT_MINING:8080
     volumes:
       - /raid:/raid
+    networks:
+      - bbs_network
+
+  mysql:
+    build:
+      context: .
+      dockerfile: docker/mysql.Dockerfile
+    image: bbs_mysql
+    container_name: $CONTAINER_NAME_MYSQL
+    environment:
+      - HTTP_PROXY
+      - HTTPS_PROXY
+      - http_proxy
+      - https_proxy
+    ports:
+      - $PORT_MYSQL:3306
+    volumes:
+      - $MYSQL_DATA_PATH:/var/lib/mysql
+    networks:
+      - bbs_network
+
+networks:
+  bbs_network:
+    name: bbs_network
+    driver: bridge
