--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ pycodestyle==2.6.0
 pymysql==0.10.0
 pytest-cov==2.10.1
 pytest==6.0.1
+python-dotenv==0.14.0
 requests==2.24.0
 responses==0.10.16
 scikit-learn==0.23.2
