Adjust the search server entrypoint

--- a/.env.example
+++ b/.env.example
@@ -7,14 +7,21 @@ HTTPS_PROXY=
 http_proxy=
 https_proxy=
 
-# Container names
-CONTAINER_NAME_BASE="bbs_base"
-CONTAINER_NAME_SEARCH="bbs_search"
-CONTAINER_NAME_EMBEDDING="bbs_embedding"
-CONTAINER_NAME_MINING="bbs_mining"
+#------------------------------------------------------------------------------
+# Container - all
+#------------------------------------------------------------------------------
+LOG_DIR="."
 
-# Container ports
-PORT_SEARCH=8850
-PORT_EMBEDDING=8851
-PORT_MINING=8852
-PORT_MYSQL=8853
+#------------------------------------------------------------------------------
+# Container - search
+#------------------------------------------------------------------------------
+SEARCH_DEBUG=
+SEARCH_LOG_FILE=
+
+SEARCH_MODELS_PATH=
+SEARCH_EMBEDDINGS_PATH=
+SEARCH_MODELS=
+
+SEARCH_MYSQL_URL=
+SEARCH_MYSQL_USER=
+SEARCH_MYSQL_PASSWORD=
