--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,23 @@
 Cython==0.29.21
 Flask==1.1.2
+PyLD==2.0.3
+PyYAML==5.3.1
 SQLAlchemy==1.3.19
 Sphinx==3.2.1
 cryptography==3.0
 dash==1.14.0
 dash-cytoscape==0.2.0
+dash-daq==0.5.0
 dash-table==4.9.0
 docker==4.3.1
+faiss-cpu==1.6.3
 flake8==3.8.3
+frozendict==1.2
 git+https://github.com/allenai/scibert
+git+https://github.com/BlueBrain/nexus-forge
+gunicorn==20.0.4
 h5py==2.10.0
+hjson==3.0.1
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
 https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_core_sci_lg-0.2.5.tar.gz
 https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_ner_craft_md-0.2.5.tar.gz
@@ -19,6 +27,7 @@ jupyter-dash==0.3.1
 jupyter-server-proxy==1.5.0
 jupyterlab==2.2.5
 matplotlib==3.3.1
+mysqlclient==2.0.1
 networkx==2.4
 nltk==3.5
 numpy==1.18.5
@@ -30,6 +39,7 @@ pymysql==0.10.0
 pytest-cov==2.10.1
 pytest==6.0.1
 python-dotenv==0.14.0
+rdflib-jsonld==0.5.0
 requests==2.24.0
 responses==0.10.16
 scikit-learn==0.23.2
@@ -38,6 +48,7 @@ sent2vec-prebuilt>=0.0.2
 sentence-transformers==0.3.3
 spacy==2.3.2
 sphinx-bluebrain-theme==0.2.3
+sseclient==0.0.26
 tensorflow-hub==0.9.0
 tensorflow==2.3.0
 torch==1.6.0
